--- a/Commander.html
+++ b/Commander.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<link rel="stylesheet" href="style.css">
 		<title>간부 출입통제</title>
 	</head>
